# libfxcg

./: Makefile  README
Platform/: Prizm.cmake
examples/autotools/src/: Makefile.am  Makefile.in
examples/cmake/: CMakeLists.txt
examples/make-libfxcg/: Makefile
include/: assert.h  features.h  libc-symbols.h  math.h  stddef.h  stdio.h  stdlib.h  string.h  system_configuration.h  uClibc_arch_features.h
include/bits/: huge_val.h  huge_valf.h  huge_vall.h  mathdef.h  stat.h  types.h
include/fxcg/: compression.h  display.h  file.h  keyboard.h  misc.h  system.h
include/sys/: cdefs.h
libc/: Makefile  _fpmaxtostr.c  _load_inttype.c  _stdio.h.bad  _store_inttype.c  _uintmaxtostr.c  _vfprintf.c  fprintf.c  printf.c  printf.h  printf2.c  scanf.c  snprintf.c  sprintf.c  stdio.c  string.c  uClibc_fpmax.h  uClibc_locale.h  uClibc_uintmaxtostr.h  vsnprintf.c  vsprintf.c
libfxcg/: Makefile
libfxcg/misc/: crt0.S
libfxcg/syscalls/: CloseDeflate.S  CloseInflate.S  ColorIndexDialog0.S  DeflateTofile.S  GetVRAMBackgroundAddress.S  InflateFromFile.S  OpenDeflate.S  OpenInflate.S  PerformDeflate.S  PerformInflate.S  RTC_TriggerAlarm.S  memcmp.S
toolchain/: Prizm.cmake  prizm.x
